Added scissorsapp branding and fine tuned heroes and nav

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -13,7 +13,11 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-1</p>
+            </div>
+        </section>
         <section class="d-flex flex-row justify-content-center pb-5 pd-hero-1 pt-5">
             <div class="align-items-center container-xl d-flex flex-row">
                 <div class="row">
@@ -55,7 +59,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-2</p>
+            </div>
+        </section>
         <section class="pd-hero-2">
             <div class="container">
                 <div class="row">
@@ -103,7 +111,11 @@ Focus on retaining candidates and clients.</p>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-3</p>
+            </div>
+        </section>
         <section class="pd-hero-3">
             <div class="container">
                 <div class="row">
@@ -151,7 +163,11 @@ Focus on retaining candidates and clients.</p>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-4</p>
+            </div>
+        </section>
         <section class="pd-hero-4 pt-5">
             <div class="container">
                 <div class="row">
@@ -189,7 +205,11 @@ Focus on retaining candidates and clients.</p>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-5</p>
+            </div>
+        </section>
         <section class="pd-hero-5 pt-5">
             <div class="container">
                 <div class="row">
@@ -227,7 +247,11 @@ Focus on retaining candidates and clients.</p>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-6</p>
+            </div>
+        </section>
         <section class="pd-hero-6">
             <script>
                 function imageLoadedListener6(e) {
@@ -266,7 +290,11 @@ Focus on retaining candidates and clients.</p>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-7</p>
+            </div>
+        </section>
         <section class="pb-5 pd-hero-7 pt-5">
             <div class="container">
                 <div class="row">
@@ -287,17 +315,21 @@ Focus on retaining candidates and clients.</p>
                                     </button>                                     
                                 </form>
                             </footer>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
                         <div class="pd-hero-7-image-outer">
-                            <img src="images/uploads/hero-scissors-office.svg" alt="image of office working using scissors software" width="400" height="400" class="img-fluid">
-                        </div>                                                  
+                            <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-scissors-office-info.svg">
+                        </div>                         
                     </div>
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-8</p>
+            </div>
+        </section>
         <section class="pb-5 pd-hero-8 pt-5">
             <div class="container">
                 <div class="row">
@@ -318,12 +350,12 @@ Focus on retaining candidates and clients.</p>
                                     </button>                                     
                                 </form>
                             </footer>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
                         <div class="pd-hero-8-image-outer">
-                            <img src="images/uploads/hero-scissors-office.svg" alt="image of office working using scissors software" width="400" height="400" class="img-fluid">
-                        </div>                                                  
+                            <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-scissors-office-primary.svg">
+                        </div>                         
                     </div>
                 </div>
             </div>
