--- a/_factory_topBars.html
+++ b/_factory_topBars.html
@@ -13,6 +13,11 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-1</p>
+            </div>
+        </section>
         <section id="pd-topBar-1" class="pd-topBar-1">
             <div class="container">
                 <div class="row">
@@ -28,7 +33,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-2</p>
+            </div>
+        </section>
         <section id="pd-topBar-2" class="bg-primary pd-topBar-2">
             <div class="container">
                 <div class="row">
@@ -44,7 +53,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-3</p>
+            </div>
+        </section>
         <section id="pd-topBar-3" class="pd-topBar-3">
             <div class="container">
                 <div class="row">
@@ -60,7 +73,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-4</p>
+            </div>
+        </section>
         <section id="pd-topBar-4" class="pd-topBar-4">
             <div class="container">
                 <div class="row">
@@ -83,7 +100,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-5</p>
+            </div>
+        </section>
         <section id="pd-topBar-5" class="bg-primary pd-topBar-5">
             <div class="container">
                 <div class="row">
@@ -106,7 +127,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-6</p>
+            </div>
+        </section>
         <section id="pd-topBar-6" class="pd-topBar-6">
             <div class="container">
                 <div class="row">
@@ -129,7 +154,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-7</p>
+            </div>
+        </section>
         <section id="pd-topBar-7" class="pd-topBar-7">
             <div class="container">
                 <div class="row">
@@ -152,7 +181,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-8</p>
+            </div>
+        </section>
         <section id="pd-topBar-8" class="bg-light pb-2 pd-topBar-8 pt-2">
             <div class="container">
                 <div class="row">
@@ -165,7 +198,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-topBar-9</p>
+            </div>
+        </section>
         <section id="pd-topBar-9" class="bg-primary pb-2 pd-topBar-9 pt-2"> 
             <div class="container">
                 <div class="row">
