--- a/index-white.html
+++ b/index-white.html
@@ -36,15 +36,15 @@
                 </div>
             </div>
         </section>
-        <section id="pd-mainNav-6" class="pd-mainNav-6">
+        <section id="pd-mainNav-7" class="pd-mainNav-7">
             <div class="container">
                 <div class="row" style="position: relative;">
                     <div class="col-auto d-flex flex-column justify-content-center" style="height: 78px; position: relative; z-index: 1000;">
-                        <a href="/" name="anchor" style="display: inline-block;"><img height="52" width="60" alt="Logo" id="logo" src="images/design-assets/logo-scissors-white.svg"></a> 
+                        <a href="/" name="anchor" style="display: inline-block;"><img height="52" width="60" alt="Logo" id="logo" src="images/design-assets/logo-scissors.svg"></a> 
                     </div>
                     <div class="col">
                         <nav>
-                            <div class="pd-mainNav-inner-6">
+                            <div class="pd-mainNav-inner-7">
                                 <ul> 
                                     <li class="pd-dropdown">
                                         <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">How<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
@@ -76,7 +76,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#" name="anchor" class="pd-pageActive-6">About</a>
+                                        <a href="#" name="anchor" class="pd-pageActive-7">About</a>
                                     </li>                                     
                                     <li>
                                         <a href="#" name="anchor">Why</a>
@@ -88,19 +88,19 @@
                                         <a href="#" name="anchor">Contact</a>
                                     </li>                                     
                                     <li>
-                                        <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
+                                        <a href="#" name="anchor" class="btn btn-outline-primary">Login</a>
                                     </li>
                                 </ul>
-                                <div class="pd-mainNav-social-6">
+                                <div class="pd-mainNav-social-7">
                                     <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-facebook.svg"></a>
                                     <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-linkedin.svg"></a>
                                     <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-twitter.svg"></a>
                                 </div>
-                                <div id="navMask6" class="pd-mainNav-mask-6"></div>
+                                <div id="navMask6" class="pd-mainNav-mask-7"></div>
                             </div>
-                            <div class="pd-mainNav-hamburger-6">
+                            <div class="pd-mainNav-hamburger-7">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
-                                    <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
+                                    <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
                                 </button>
                             </div>
                         </nav>                         
@@ -108,18 +108,18 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pd-hero-7 pt-5">
+        <section class="pb-5 pd-hero-8 pt-5">
             <div class="container">
                 <div class="row">
                     <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <p class="pd-hero-8-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
-                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <p class="pd-hero-8-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <footer>
-                                <form role="form" class="pd-hero-7-cta"> 
+                                <form role="form" class="pd-hero-8-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
@@ -131,7 +131,7 @@
                         </div>                         
                     </div>
                     <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
-                        <div class="pd-hero-7-image-outer">
+                        <div class="pd-hero-8-image-outer">
                             <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-scissors-office-primary.svg">
                         </div>                         
                     </div>
