--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -13,6 +13,11 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-1</p>
+            </div>
+        </section>
         <section id="pd-mainNav-1" class="pd-mainNav-1">
             <div class="container">
                 <div class="row">
@@ -54,7 +59,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-2</p>
+            </div>
+        </section>
         <section id="pd-mainNav-2" class="pd-mainNav-2">
             <div class="container">
                 <div class="row">
@@ -96,7 +105,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-3</p>
+            </div>
+        </section>
         <section id="pd-mainNav-3" class="pd-mainNav-3">
             <div class="container">
                 <div class="row">
@@ -140,7 +153,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-4</p>
+            </div>
+        </section>
         <header style="position: relative;">
             <section id="pd-mainNav-4" class="pd-mainNav-4" style="z-index: 1000; position: relative;">
                 <div class="container">
@@ -187,7 +204,11 @@
                 <img style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;" src="images/uploads/hero-sample-2.jpg">
             </section>
         </header>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-5</p>
+            </div>
+        </section>
         <section id="pd-mainNav-5" class="pd-mainNav-5">
             <div class="container">
                 <div class="row">
@@ -229,7 +250,11 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5"></section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-6 - to create transparent version add class pd-mainNav-6-transparent to outer section</p>
+            </div>
+        </section>
         <section id="pd-mainNav-6" class="pd-mainNav-6">
             <div class="container">
                 <div class="row" style="position: relative;">
@@ -292,6 +317,82 @@
                                 <div id="navMask6" class="pd-mainNav-mask-6"></div>
                             </div>
                             <div class="pd-mainNav-hamburger-6">
+                                <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                    <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
+                                </button>
+                            </div>
+                        </nav>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-mainNav-7</p>
+            </div>
+        </section>
+        <section id="pd-mainNav-7" class="pd-mainNav-7">
+            <div class="container">
+                <div class="row" style="position: relative;">
+                    <div class="col-auto d-flex flex-column justify-content-center" style="height: 78px; position: relative; z-index: 1000;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img height="50" width="156" alt="Logo" id="logo" src="images/design-assets/fort-logo.svg"></a> 
+                    </div>
+                    <div class="col">
+                        <nav>
+                            <div class="pd-mainNav-inner-7">
+                                <ul> 
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-pageActive-7">About</a>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu" id="dropDown7-1">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Industries<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu" id="dropDown7-2">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Industry 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 2</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 4</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 5</a>
+                                            </li>
+                                        </ul>
+                                    </li>                                     
+                                    <li>
+                                        <a href="#" name="anchor">Portfolio</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor">Segments</a>
+                                    </li>                                     
+                                    <li>
+                                        <a href="#" name="anchor" class="btn btn-outline-primary">Login</a>
+                                    </li>
+                                </ul>
+                                <div class="pd-mainNav-social-7">
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-facebook.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-linkedin.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-twitter.svg"></a>
+                                </div>
+                                <div id="navMask6" class="pd-mainNav-mask-7"></div>
+                            </div>
+                            <div class="pd-mainNav-hamburger-7">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
                                     <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
                                 </button>
