--- a/index-2.html
+++ b/index-2.html
@@ -108,31 +108,48 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pd-hero-7 pt-5">
+        <section class="pd-hero-2">
             <div class="container">
                 <div class="row">
-                    <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
-                        <div>
+                    <div class="align-items-center col d-flex flex-column">
+                        <div class="pd-hero-2-headline-outer">
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <p class="pd-hero-2-headline">Take back hours of data entry. Throw away your paper stacks.
+Focus on retaining candidates and clients.</p>
                             </header>
-                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
-                            <footer>
-                                <form role="form" class="pd-hero-7-cta"> 
-                                    <div> 
-                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
-                                    </div>                                     
-                                    <button type="submit" class="btn btn-info ">
+                            <p class="pd-hero-2-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <footer class="pb-4 pd-hero-2-form-outer pt-2">
+                                <form>
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control" id="email" value="Enter your email address">
+                                    </div>
+                                    <button type="submit" class="btn btn-info">
                                         <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
-                                    </button>                                     
+                                    </button>
                                 </form>
                             </footer>
-                        </div>                         
-                    </div>
-                    <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
-                        <div class="pd-hero-7-image-outer">
-                            <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-scissors-office-primary.svg">
+                        </div>
+                        <div style="position: relative;">
+                            <div class="pd-hero-image-2-outer">
+                                <script>
+                                function imageLoadedListener2(e) {
+                                    const heroImageLoader2 = document.querySelector(".pd-hero-2-loader");
+                                    const heroImage2 = document.querySelector(".pd-hero-image-2");
+                                    heroImageLoader2.classList.add("pd-hero-2-remove-loader");
+                                    heroImage2.classList.add("pd-hero-image-2-loaded");
+                                }
+                            </script>
+                                <picture>
+                                    <source srcset="/images/uploads/hero-scissors.webp 1600w, 
+                                            /images/uploads/hero-scissors-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" type="image/webp">
+                                    <img srcset="/images/uploads/hero-scissors.png 1600w, 
+                                            /images/uploads/hero-scissors-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 64px), 1600px" src="/images/uploads/hero-scissors-mob.png" alt="image of scissors app" onload="imageLoadedListener2()" class="pd-hero-image-2">
+                                </picture>
+                            </div>
+                            <div class="pd-hero-2-loader">
+                                <img src="images/design-assets/icon-loading-white.svg" alt="image loading icon" width="200" height="200">
+                            </div>
                         </div>                         
                     </div>
                 </div>
