--- a/index-light.html
+++ b/index-light.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Light with drawing</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -108,39 +108,32 @@
                 </div>
             </div>
         </section>
-        <section class="pd-hero-4 pt-5">
+        <section class="pb-5 pd-hero-8 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-xl-6 d-flex flex-column justify-content-center pb-5">
+                    <div class="align-items-center col-lg-6 col-md-7 d-flex flex-row justify-content-start">
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-4-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                                <p class="pd-hero-8-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
-                            <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <p class="pd-hero-8-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
                             <footer>
-                                <form role="form" class="pd-hero-4-cta"> 
+                                <form role="form" class="pd-hero-8-cta"> 
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"> 
                                     </div>                                     
                                     <button type="submit" class="btn btn-info ">
-                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
                         </div>                         
                     </div>
-                    <div class="align-items-center col-lg-12 col-xl-6 d-flex flex-column justify-content-end">
-                        <script>
-                            function imageLoadedListener4(e) {
-                                const heroImage4 = document.querySelector(".pd-hero-4-image");
-                                heroImage4.classList.add("pd-hero-image-4-loaded");
-                            }
-                        </script>
-                        <picture>
-                            <source srcset="/images/uploads/hero-scissors-collage.webp" type="image/webp">
-                            <img src="/images/uploads/hero-scissors-collage.png" class="img-fluid pd-hero-4-image" alt="Image of scissors app software" onload="imageLoadedListener4()"/> 
-                        </picture>
+                    <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0">
+                        <div class="pd-hero-8-image-outer">
+                            <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-scissors-office-primary.svg">
+                        </div>                         
                     </div>
                 </div>
             </div>
