--- a/index-5.html
+++ b/index-5.html
@@ -19,8 +19,8 @@
                 <div class="row">
                     <div class="col-md-6 d-flex flex-row">
                         <div class="align-items-center d-flex flex-row p-2">
-                            <img src="images/design-assets/icon-arrow-primary.svg" alt="icon arrow" width="16" height="16">
-                            <p class="ps-2" style="color: #3C46AA;">Automating your recruitment processes</p>
+                            <img alt="icon arrow" width="16" height="16" src="images/design-assets/icon-arrow-secondary.svg">
+                            <p class="ps-2" style="color: #17A9E6;">Automating your recruitment processes</p>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex flex-row justify-content-end">
@@ -127,7 +127,7 @@
                     <div class="col-md-8">
                         <div>
                             <header>
-                                <h1>Recruitment Software</h1>
+                                <h1 style="background: #17A9E6;">Recruitment Software</h1>
                                 <p class="pd-hero-6-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
                             <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
